2024-04-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/peeph.def:
	  Improve storing of 0 into global variables.

2024-04-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/scripts/as2gbmap.py:
	  Migrate as2gbmap to Python 3, patch from Debian.
	* src/z80/peep.c:
	  Improve handling of function calls in notUsed(From)('iy').
	* src/z80/gen.c:
	  Fix handling of operand in a in built-in strchr.

2024-04-19 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Improve handling of register argument in a in register allocation.

2024-04-19 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix generation of a redundant instruction in z80 comparison.

2024-04-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peep.c:
	  Improve handling of function calls in notUsed(From).
	* src/z80/gen.c:
	  Improve addition of 256 to 16-bit register operand.

2024-04-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/discussion-1854.c,
	  support/regression/tests/bug-3728.c,
	  support/regression/tests/bug-3729.c:
	  Add 2 regression tests for potential issues.

2024-04-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/include/asm/r2k/features.h,
	  device/include/asm/r3ka/features.h,
	  device/include/asm/sm83/features.h,
	  device/include/asm/stm8/features.h,
	  device/include/asm/tlcs90/features.h,
	  device/include/asm/z80/features.h,
	  device/lib/_strcmp.c,
	  device/lib/_strcpy.c,
	  src/z80/peeph.def,
	  support/regression/tests/bug-3728.c:
	  Fix bug #3728.
	* support/regression/tests/bug-3727.c:
	  Simplify regression test, as suggested by Janko Stamenović.

2024-04-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/peeph.def,
	  src/z80/ralloc2.cc:
	  Improve use of hl, towards RFE #905.

2024-04-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc: